[package]
name = "moip"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
prost = "0.13"
prost-derive = "0.13"
prost-types = "0.13"
derive_more = { version = "1.0", features = ["full"] }
reqwest = "0.12"
reqwest-middleware = "0.3"
tracing = "0.1"
tracing-serde = "0.1"
tonic = "0.12"
tokio = { version = "1.40", features = ["full"] }
async-stream = "0.3"
base64 = "0.22"
base64-stream = "4.0"
futures = "0.3"
futures-util = "0.3"
humantime = "2.1"
humantime-serde = "1.1"
clap = "4.5"
itertools = "0.13"
lazy_static = "1.5"
regex = "1.11"
stream-cancel = "0.8"
strum = "0.26"
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
tokio-util = "0.7"
tryhard = "0.5"
uuid = "1.10"
rand = "0.8"
bytes = "1.7"
byteorder = "1.5"
once_cell = "1.20"
opus = "0.3"
ogg = "0.9"
tower = "0.5"
tower-async = "0.2"
async-trait = "0.1"
prometheus = "0.13"
rustls = "0.23"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-console = "0.1"
mockall = "0.13"
paste = "1.0"
tracing-test = "0.2"

